--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "devtree",
+  "type": "module",
   "version": "1.0.0",
   "description": "Proyecto con express y TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "Ignasi",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
